--- a/package.json
+++ b/package.json
@@ -5,21 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "seed": "node utils/seed.js",
-    "dev": "nodemon server.js"
+    "start": "nodemon server.js",
+    "seed": "node utils/seed.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "date-fns": "^2.29.3",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
-    "nosql": "^6.1.0",
-    "sequelize": "^6.31.0"
+    "nosql": "^6.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
