--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "seed": "node utils/seed.js"
   },
   "keywords": [],
@@ -17,8 +17,5 @@
     "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
     "nosql": "^6.1.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
   }
 }
